# Utilities

./: .travis.yml  CMakeLists.txt  Jenkinsfile  README.md
docs/: Makefile
docs/source/: IntroToCombinatorics.md  conf.py  index.rst
tests/: CMakeLists.txt  cartesian_product.cpp  case_insensitive_map.cpp  combinations.cpp  combinatorics.cpp  enumerate.cpp  integer_utils.cpp  iterator_types.cpp  math_set.cpp  permutations.cpp  range.cpp  range_container.cpp  smart_enum.cpp  static_string.cpp  timer.cpp  tuple_utilities.cpp  type_traits_extensions.cpp  zip.cpp
utilities/: CMakeLists.txt  README.md  iter_tools.hpp  smart_enum.hpp  static_string.hpp  timer.hpp
utilities/containers/: case_insensitive_map.hpp  math_set.hpp
utilities/iter_tools/: cartesian_product.hpp  combinations.hpp  enumerate.hpp  permutations.hpp  range.hpp  range_container.hpp  tuple_container.hpp  zip.hpp
utilities/macros/: for_each.hpp
utilities/mathematician/: combinatorics.cpp  combinatorics.hpp  integer_utils.hpp
utilities/type_traits/: iterator_types.hpp  tuple_utilities.hpp  type_traits_extensions.hpp
